# MoreTrash

HadesPy/ai-agent/: .env.example  .env.production.example  .gitignore  .gitlab-ci.yml  Containerfile  DEPLOYMENT.md  README.md  docker-compose.yml  podman-compose.yml  pyproject.toml  render.yaml
HadesPy/ai-agent/deploy/directus/: Dockerfile  health-check.sh  init.sh
HadesPy/ai-agent/deploy/neo4j/: Dockerfile  health-check.sh
HadesPy/ai-agent/deploy/nginx/: nginx.conf
HadesPy/ai-agent/deploy/prometheus/: alerts.yml  prometheus.yml
HadesPy/ai-agent/directus/: config.js  schema.yml  seed-courses.js
HadesPy/ai-agent/docs/: REWRITE_SUMMARY.md  architecture_audit.md  cognee_analysis.md  current_architecture.md  dependency_graph.md  integration_architecture.md
HadesPy/ai-agent/migrations/: 001_create_postgres_schema.sql  002_migrate_data.sql  runner.py
HadesPy/ai-agent/migrations/backup/: data.sql  env-snapshot.txt  schema.sql
HadesPy/ai-agent/scripts/: bootstrap.sh  deploy.sh  hardening.sh  render-health-check.sh  setup-directus.sh  train_ranker.py
HadesPy/ai-agent/src/: __init__.py  config.py  directus_client.py  logging_config.py  main.py  mcp_tools.py  memory.py  memory_graph.py  ui_gradio.py  ui_streamlit.py
HadesPy/ai-agent/tests/: __init__.py  conftest.py  test_determinism.py  test_determinism_cognee.py  test_determinism_pipeline.py  test_determinism_ranking.py  test_directus.py  test_main.py  test_mcp_tools.py  test_memory.py  test_rag_pipeline.py  test_spatial_migration.py  test_xgboost_ranking.py
HadesPython/: Apple.py  CacheStrat.md  main.py  pyproject.toml
Matcher/: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  README.md  nginx.conf  podman-compose.yml  start.sh
Matcher/app/: page.tsx
Matcher/assets/: styles.css
Matcher/directus/: README.md  schema.json
Matcher/directus/hooks/: README.md
Matcher/src/: config.rs  main.rs
Matcher/src/components/: button.rs  card.rs  footer.rs  header.rs  mod.rs
Matcher/src/pages/: about.rs  auth.rs  contact.rs  dashboard.rs  home.rs  mod.rs  platform.rs  pricing.rs  solutions.rs
Matcher/src/services/: auth.rs  directus.rs  fastapi.rs  hasura.rs  mod.rs
Matcher/templates/: index.html
MysteryiousHounslow/: .bandit.yml  .env.example  .env.local.example  .gitignore  BUG_FIX_ACTION_PLAN.md  CHANGELOG.md  Cargo.toml  Dockerfile  GIT_HISTORY.md  LICENSE  README.md  README.md.backup  design.md  interaction.md  outline.md  podman-compose.yml  pyproject.toml
MysteryiousHounslow/.github/: CODEOWNERS
MysteryiousHounslow/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MysteryiousHounslow/.github/workflows/: ci.yml  security.yml  security_pipeline.yml  sql_injection.yml
MysteryiousHounslow/docker/: Dockerfile  docker-compose.staging.yml  docker-compose.yml
MysteryiousHounslow/docker/nginx/: nginx.conf  staging.conf
MysteryiousHounslow/docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  README.md  audit_summary.md  compliance_audit.md  compliance_report.md  devsecops_final_report.md  devsecops_implementation.md  devsecops_report.md  fastapi_integration.md  final_compliance_100.md  incident_response.md  network_audit.md  network_implementation_complete.md  network_setup.md  risk_assessment.md  security_pipeline_complete.md
MysteryiousHounslow/docs/architecture/: cli.md  overview.md
MysteryiousHounslow/docs/cli/: commands.md  examples.md
MysteryiousHounslow/docs/compliance/: cli_security.md  uk_cli_compliance.md
MysteryiousHounslow/docs/deployment/: go_live_checklist.md
MysteryiousHounslow/docs/legal/: cookie_policy.md  dpa.md  ico_registration.md  privacy_policy.md  terms.md
MysteryiousHounslow/dummy-demo/: Containerfile  README.md  docker-compose.yml
MysteryiousHounslow/dummy-demo/app/: Cargo.toml
MysteryiousHounslow/dummy-demo/database/: init.sql
MysteryiousHounslow/dummy-demo/scripts/: run_local.sh  start.sh  start_simple.sh  test.sh
MysteryiousHounslow/fastapi_xgboost_optimizer/: .env.example  .gitignore  pyproject.toml
MysteryiousHounslow/fastapi_xgboost_optimizer/app/: main.py
MysteryiousHounslow/fastapi_xgboost_optimizer/container/: Containerfile  docker-compose.yml
MysteryiousHounslow/fastapi_xgboost_optimizer/requirements/: base.txt  dev.txt  prod.txt
MysteryiousHounslow/fastapi_xgboost_optimizer/tests/: conftest.py  test_app.py  test_integration.py
MysteryiousHounslow/matchgorithm-cli/: Cargo.toml
MysteryiousHounslow/matchgorithm-cli/src/: lib.rs  main.rs
MysteryiousHounslow/migrations/: 001_init.sql  001_init_schema.sql  002_add_indexes.sql  002_knn_function.sql  003_add_pgvector_postgis.sql  006_hybrid_knn.sql
MysteryiousHounslow/ml_pipeline/: main.py  requirements.txt
MysteryiousHounslow/monitoring/: prometheus.yml  security_monitoring.yml
MysteryiousHounslow/nginx/conf.d/: app.conf
MysteryiousHounslow/public/: llm.txt
MysteryiousHounslow/public/css/: input.css
MysteryiousHounslow/scripts/: audit.sh  comprehensive_bug_check.sh  final_validation.sh  final_verification.sh  generate_certs.sh  network_security.sh  production_setup.sh  rollback.sh  run_migrations.sh  security_dashboard.sh  security_scan.sh  setup.sh  setup_environment.sh  setup_monitoring.sh  test_sql_injection.sh  verify_cli_update.sh  verify_fixes.sh  verify_hybrid_knn.sh  verify_network.sh  verify_uk_residency.sh
MysteryiousHounslow/scripts/prod/: deploy_prod.sh  deploy_staging.sh
MysteryiousHounslow/src/backend/: __init__.py  main.py  pipeline.py
MysteryiousHounslow/src/frontend/: main.rs
MysteryiousHounslow/src/middleware/: auth.rs  cors.rs  mod.rs  security.rs
MysteryiousHounslow/src/shared/: config.rs
MysteryiousHounslow/tests/unit/: validation.rs
MysteryiousHounslow/views/: home.hbs
MysteryiousHounslow/views/auth/: sign-in.hbs
MysteryiousHounslow/views/layouts/: auth.hbs  dashboard.hbs  main.hbs
MysteryiousHounslow/views/partials/: dashboard-header.hbs  dashboard-sidebar.hbs  footer.hbs  header.hbs
riverStyx/: Cargo.toml
riverStyx/frontend/: Cargo.toml
riverStyx/frontend/src/: l0.rs
riverStyx/src/cache/: l1.rs  l2.rs
(+764 files in other folders)
