[package]
name = "matchgorithm"
version = "1.0.0"
edition = "2021"
authors = ["Matchgorithm Team <team@matchgorithm.co.uk>"]
description = "Matchgorithm - AI-Powered Matching Platform with Evolutionary Algorithms"
repository = "https://github.com/matchgorithm/matchgorithm-app"
license = "MIT"
readme = "README.md"

[dependencies]
# Dioxus core and web framework
dioxus = { version = "0.6", features = ["web", "router", "fullstack"] }
dioxus-web = "0.6"
dioxus-router = "0.6"
dioxus-fullstack = "0.6"

# Server framework
axum = { version = "0.7", features = ["tokio", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-full", "cors", "trace"] }

# GraphQL client for Hasura
graphql_client = "0.14"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment and configuration (Podman secrets)
dotenvy = "0.15"

# Postgres connection
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

# WASM-compatible HTTP client for frontend forms
gloo-net = "0.6"
# Web APIs for localStorage, window, etc.
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "UrlSearchParams"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
