[package]
name = "matchgorithm"
version = "0.1.0"
edition = "2021"
authors = ["Matchgorithm Team <team@matchgorithm.com>"]
description = "Matchgorithm - AI-Powered Matching Platform with Evolutionary Algorithms"
license = "Proprietary"
repository = "https://github.com/your-org/matchgorithm"
homepage = "https://matchgorithm.com"
documentation = "https://docs.matchgorithm.com"

[dependencies]
# Dioxus core and web framework
dioxus = { version = "0.6", features = ["web", "router", "fullstack"] }
dioxus-web = "0.6"
dioxus-router = "0.6"
dioxus-fullstack = "0.6"

# Server framework
axum = { version = "0.7", features = ["tokio", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-full", "cors"] }

# GraphQL client for Hasura
graphql_client = "0.14"
reqwest = { version = "0.12", features = ["json"] }

# Directus SDK
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment and configuration (Podman secrets)
config = "0.14"

# Postgres connection
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Maximize optimization
strip = true        # Strip symbols
panic = "abort"     # Reduce binary size
