[project]
name = "AI-Agent-Directus-FastMCP-FullStack"
version = "0.1.0"
description = "End-to-end AI agent system with Directus, FastAPI, FastMCP, Cognee RAG, Gradio UI, Podman networking, GitLab CI/CD, and hardened Linux deployment."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AI Engineer / DevOps"}
]
keywords = ["fastapi", "fastmcp", "directus", "cognee", "rag", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "anyio>=4.7.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.34.0",
    # MCP
    "fastmcp>=0.4.0",
    # Directus
    "directus-sdk-py>=1.0.0",
    # Memory / RAG
    "cognee>=0.5.3",
    "sentence-transformers>=3.3.0",
    # Ranking / ML
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    # UI
    "gradio>=5.12.0",
    "streamlit>=1.41.0",
    # Observability
    "prometheus-client>=0.21.0",
    "orjson>=3.10.0",
    "python-dotenv>=1.0.0",
    # Additional utilities
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    # Database
    "asyncpg>=0.30.0",
    "neo4j>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
]

[project.scripts]
ai-agent-api = "src.main:main"
ai-agent-gradio = "src.ui_gradio:main"
ai-agent-streamlit = "src.ui_streamlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
