[package]
name = "matchgorithm-cli"
version = "0.1.0"
edition = "2021"
authors = ["Rayan Aliane <rayan@matchgorithm.co.uk>"]
license = "MIT"
description = "CLI tool for managing Matchgorithm webapp"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
podman-api = "0.1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "json"] }
dialoguer = "0.10"
indicatif = "0.17"
tabled = "0.10"
chrono = { version = "0.4", features = ["serde"] }